Fix pagination alignment centering and wrap on mobile

--- a/client/components/pagination/style.scss
+++ b/client/components/pagination/style.scss
@@ -7,6 +7,10 @@
 	justify-content: center;
 	align-items: center;
 
+	@include breakpoint( '<782px' ) {
+		flex-direction: column;
+	}
+
 	input {
 		border-radius: 4px;
 	}
@@ -48,7 +52,12 @@
 }
 
 .woocommerce-pagination__page-picker {
-	margin-left: $spacing / 2;
+	margin-left: $spacing;
+
+	@include breakpoint( '<782px' ) {
+		margin-top: 14px;
+		margin-left: 0;
+	}
 }
 
 .woocommerce-pagination__page-picker-input {
@@ -57,8 +66,12 @@
 }
 
 .woocommerce-pagination__per-page-picker {
-	margin-left: $spacing / 2;
+	margin-left: $spacing;
 
+	@include breakpoint( '<782px' ) {
+		margin-top: 14px;
+		margin-left: 0;
+	}
 	.components-base-control {
 		margin-bottom: 0;
 	}
@@ -66,6 +79,7 @@
 		display: flex;
 		flex-direction: row;
 		align-items: baseline;
+		margin-bottom: 0;
 	}
 
 	.components-select-control__input {
